Quorum/Library/Tests/Expressions/Fail/APublicValue.quorum
class A 
    public text field = ""
end